<resources>
    <string name="app_name">MedicalAnnals</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <u>Sign up</u></string>
    <string name="email_address">Email Address</string>
    <string name="age">Age</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logo">logo</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In.</string>
    <string name="drawer_image">Drawer image</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="view_slots">View Slots</string>
    <string name="dr_ahmed">Dr. Ahmed</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="slots_available">Slots Available</string>
    <string name="_1_1_2022">01-01-2022</string>
    <string name="slot_1">Slot 1 : </string>
    <string name="_11_00_am">11:00 AM</string>
    <string name="book_slot">Book Slot</string>
    <string name="slot_2">Slot 2 :</string>
    <string name="_12_00_am">12:00 AM</string>
    <string name="slot_3">Slot 3 :</string>
    <string name="_4_00_pm">4:00 PM</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_day">Enter Day</string>
    <string name="enter_time">Enter Time</string>
    <string name="set_slot">Set Slot</string>
    <string name="medical_annals">Medical Annals</string>
    <string name="search_doctor">Search Doctor</string>
    <string name="child_specialist">Child Specialist</string>
    <string name="find_specialities">Find Specialities</string>
    <string name="dr_maaz_shahzad">Dr. Maaz Shahzad</string>
    <string name="shifa_international_hospital">Shifa International Hospital(Islamabad)</string>
    <string name="_1000">1000</string>
    <string name="change"><u>Change</u></string>
    <string name="tomorrow">Tomorrow</string>
    <string name="_26">26</string>
    <string name="morning_slots">Morning Slots</string>
    <string name="afternoon_slots">Afternoon Slots</string>
    <string name="evening_slots">Evening Slots</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="book_slots">Book slots</string>
    <string name="areesha_fatima">Areesha Fatima</string>
    <string name="demo_gmail_com">demo@gmail.com</string>
    <string name="view_appointments">View Appointments</string>
    <string name="set_appointments">Set Appointments</string>
    <string name="view_medical_records">View Medical Records</string>
    <string name="profile_management">Profile Management</string>
    <string name="update_password">Update Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="medical_record">Medical Record</string>
    <string name="phone_number">Phone Number</string>
    <string name="experience_in_years">Experience in years</string>
    <string name="specialization">Specialization</string>
    <string name="enter_6_digit_code">Enter 6 digit Code</string>
    <string name="verify">Verify</string>
    <string name="_03000000000">03000000000</string>
    <string name="ok">Ok</string>
    <string name="enter_fee">Enter Fee</string>
    <string name="_10_2_2022">Feb 10, 2022</string>

</resources>