<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_medical_record"
            android:icon="@drawable/record"
            android:title="@string/medical_record" />

        <item
            android:id="@+id/nav_profile_management"
            android:icon="@drawable/profile"
            android:title="@string/profile_management" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/phone"
            android:visible="false"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="Logout" />
    </group>


</menu>
