<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue_700"
    tools:context=".activities.SignIn">


    <TextView
        android:id="@+id/tv_doctors_on_demand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/medical_annals"
        android:textColor="@color/white"
        android:textSize="@dimen/_30ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_380sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"
        app:layout_constraintVertical_bias="1.0" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_40ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mainCardView"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_300sdp"
                app:cardElevation="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ti_constraint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/login_constraint">

                    <TextView
                        android:id="@+id/tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:text="@string/sign_in"
                        android:textColor="@color/dark_blue_700"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ti_email_address"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:hint="@string/email_address"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_login">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tied_email_address_sign_in"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textEmailAddress"
                            android:maxLength="25"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ti_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:hint="@string/password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ti_email_address">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tied_password_sign_in"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxLength="15" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="25dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/dark_blue_700"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ti_password" />


                    <RadioGroup
                        android:id="@+id/groupradio"
                        android:orientation="horizontal"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password">

                        <RadioButton
                            android:id="@+id/rb_patient"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="Patient"
                            android:checked="true"
                            android:buttonTint="@color/dark_blue_700"
                            android:paddingBottom="@dimen/_10sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:textColor="@color/dark_blue_700"
                            android:textSize="@dimen/_12sdp"/>

                        <RadioButton
                            android:id="@+id/rb_doctor"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="Doctor"
                            android:paddingBottom="@dimen/_10sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:buttonTint="@color/dark_blue_700"
                            android:textColor="@color/dark_blue_700"
                            android:textSize="@dimen/_12sdp"/>

                    </RadioGroup>


                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:backgroundTint="@color/dark_blue_700"
                        android:text="@string/sign_in"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/groupradio" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:id="@+id/tv_sign_up_for_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="@color/dark_blue_700"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainCardView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

</androidx.constraintlayout.widget.ConstraintLayout>